--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -33,20 +33,23 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let product of products  | async | product: searchProduct"
+        <tr *ngFor="let product of productsShow | product: searchProduct"
           [ngClass]="{'bg-danger': product.currentQuantity == 0 || product.minimumQuantity > product.currentQuantity}">
-          <td class="text-left" (click)="updateProduct(product)" style="cursor: pointer">{{ product.id.trim() }}</td>
+          <td class="text-center" (click)="updateProduct(product)" style="cursor: pointer">{{ product.pid }}</td>
           <td class="text-left">{{ product.barcode }}</td>
-          <td class="text-left">{{ product.productCode }}</td>
-          <td class="text-center">{{ product.foodId }}</td>
-          <td class="text-left">{{ product.productName }}</td>
-          <td class="text-left">{{ product.productTypeCode }}</td>
+          <td class="text-left">{{ product.product_code }}</td>
+          <td class="text-center" *ngIf="product.foodId; else nonFoodId">{{ product.foodId }}</td>
+          <ng-template #nonFoodId>
+            <td class="text-center">N/A</td>
+          </ng-template>
+          <td class="text-left">{{ product.product_name }}</td>
+          <td class="text-left">{{ product.category_name }}</td>
           <td class="text-right">{{ product.cost |number }}</td>
-          <td class="text-center">{{ product.minimumQuantity |number }}</td>
+          <td class="text-center">{{ product.minimum |number }}</td>
           <td class="text-center">{{ product.currentQuantity |number }}</td>
-          <td class="text-left">{{ product.unit }}</td>
-          <td class="text-left">{{ product.vendorId }}</td>
-          <td class="text-center">{{ product.createdAt.toDate() |date }}</td>
+          <td class="text-center">{{ product.unit_name }}</td>
+          <td class="text-left">{{ product.supplier_name }}</td>
+          <td class="text-center">{{ product.createdAt |date }}</td>
           <td class="text-center"><button mat-raised-button color="warn"
               (click)="deleteProduct(product)">Delete</button><span class="spaceDiv"></span><button mat-raised-button
               color="primary" (click)="updateProduct(product)">Update</button></td>
