--- a/src/app/dialogs/add-purchase/add-purchase.component.html
+++ b/src/app/dialogs/add-purchase/add-purchase.component.html
@@ -144,6 +144,14 @@
               </td>
             </tr>
           </tbody>
+          <tfoot>
+            <td colspan="5" class="text-right">
+              Total
+            </td>
+            <td class="text-right" style="font-weight: bold">
+              {{ billTotalAmount| number}}
+            </td>
+          </tfoot>
         </table>
       </div>
     </form>
